Se borra los signos $ de todos los productos

--- a/pages/productos/accesorios-1.html
+++ b/pages/productos/accesorios-1.html
@@ -78,7 +78,7 @@
                     <div class="p-4">
                         <strong data-id="accesorios">Buds 3T Pro</strong>
                         <div class="precios pb-5 pt-2">
-                            <span class="me-4 ">$127.900</span>
+                            <span class="me-4 ">127900.00</span>
                             <span class="text-decoration-line-through"></span> <!-- espaciado entre precios -->
                         </div>
                         <p>Los auriculares adoptan la tecnología de cancelación activa de ruido dual con micrófonos de
