--- a/pages/productos/accesorios-3.html
+++ b/pages/productos/accesorios-3.html
@@ -80,7 +80,7 @@
                     <div class="p-4">
                         <strong data-id="accesorios">Xiaomi Watch S1 Active GL</strong>
                         <div class="precios pb-5 pt-2">
-                            <span class="me-4 ">$196.900</span>
+                            <span class="me-4 ">196900.00</span>
                             <span class="text-decoration-line-through"></span> <!-- espaciado entre precios -->
                         </div>
                         <p>Pantalla AMOLED HD de 1.43″: Este reloj cuenta con una pantalla de alta resolución y color.
