--- a/pages/productos/accesorios-4.html
+++ b/pages/productos/accesorios-4.html
@@ -80,7 +80,7 @@
                     <div class="p-4">
                         <strong data-id="accesorios">Smart Watch Redmi 2</strong>
                         <div class="precios pb-5 pt-2">
-                            <span class="me-4 ">$82.900</span>
+                            <span class="me-4 ">82900.00</span>
                             <span class="text-decoration-line-through">$92.100</span> <!-- espaciado entre precios -->
                         </div>
                         <p>Pantalla táctil HD de 1,55".Pantalla de alta resolución, colorida y con más detalles. Mayor
