--- a/pages/productos/accesorios-5.html
+++ b/pages/productos/accesorios-5.html
@@ -80,7 +80,7 @@
                     <div class="p-4">
                         <strong data-id="accesorios">Xiaomi 10W Wireless Power Bank 10000</strong>
                         <div class="precios pb-5 pt-2">
-                            <span class="me-4 ">$40.199</span>
+                            <span class="me-4 ">40199.00</span>
                             <span class="text-decoration-line-through"></span> <!-- espaciado entre precios -->
                         </div>
                         <p>El banco de energía detecta automáticamente la carga y descarga inalámbrica y por cable.</p>
