--- a/pages/productos/accesorios-6.html
+++ b/pages/productos/accesorios-6.html
@@ -80,7 +80,7 @@
                     <div class="p-4">
                         <strong data-id="accesorios">Cable USB-C a USB-A Xiaomi Braided (1m)</strong>
                         <div class="precios pb-5 pt-2">
-                            <span class="me-4 ">$6599</span>
+                            <span class="me-4 ">6599.00</span>
                             <span class="text-decoration-line-through"></span> <!-- espaciado entre precios -->
                         </div>
                         <p>Reforzado con fibra de vidrio y TPE, cable USB-C con una longitud de 100 cm, cumple con las
