--- a/pages/productos/computacion-1.html
+++ b/pages/productos/computacion-1.html
@@ -80,7 +80,7 @@
                     <div class="p-4">
                         <strong data-id="computacion">Tablet Xiaomi Pad 5 6GB RAM</strong>
                         <div class="precios pb-5 pt-2">
-                            <span class="me-4 ">$461.900</span>
+                            <span class="me-4 ">461900.00</span>
                             <span class="text-decoration-line-through">$552.000</span> <!-- espaciado entre precios -->
                         </div>
                         <p>La estrella es el panel: una LCD con resolución 2K y tasa de refresco de 120Hz. Además, es
