--- a/pages/productos/computacion-2.html
+++ b/pages/productos/computacion-2.html
@@ -80,7 +80,7 @@
                     <div class="p-4">
                         <strong data-id="computacion">Xiaomi Mi Tablet de Escritura 13,5"</strong>
                         <div class="precios pb-5 pt-2">
-                            <span class="me-4 ">$33.200</span>
+                            <span class="me-4 ">33200.00</span>
                             <span class="text-decoration-line-through"></span> <!-- espaciado entre precios -->
                         </div>
                         <p>La Mi LCD Writing Tablet utiliza una película LCD personalizada con escritura azul y verde, y
