--- a/pages/productos/computacion-4.html
+++ b/pages/productos/computacion-4.html
@@ -80,7 +80,7 @@
                     <div class="p-4">
                         <strong data-id="computacion">Xiaomi Smart Pen</strong>
                         <div class="precios pb-5 pt-2">
-                            <span class="me-4 ">$115.900</span>
+                            <span class="me-4 ">115900.00</span>
                             <span class="text-decoration-line-through">$125.999</span> <!-- espaciado entre precios -->
                         </div>
                         <p>Dispara tu creatividad con el Xiaomi Smart Pen y siente como si utilizaras un lápiz
