--- a/pages/productos/smartphone-1.html
+++ b/pages/productos/smartphone-1.html
@@ -80,7 +80,7 @@
                     <div class="p-4">
                         <strong data-id="smartphone">Redmi 10 2022 4GB RAM</strong>
                         <div class="precios pb-5 pt-2">
-                            <span class="me-4 ">$155.900</span>
+                            <span class="me-4 ">155900.00</span>
                             <span class="text-decoration-line-through">$184.900</span> <!-- espaciado entre precios -->
                         </div>
                         <p>Pantalla de 6,5" con resolución FHD+, cámara cuádruple de 50 MP, fiable procesador Helio G88
