--- a/pages/productos/smartphone-3.html
+++ b/pages/productos/smartphone-3.html
@@ -80,7 +80,7 @@
                     <div class="p-4">
                         <strong data-id="smartphone">Redmi Note 11 Pro+</strong>
                         <div class="precios pb-5 pt-2">
-                            <span class="me-4 ">$399.900</span>
+                            <span class="me-4 ">399900.00</span>
                             <span class="text-decoration-line-through">$420.000</span> <!-- espaciado entre precios -->
                         </div>
                         <p>El Redmi Note 11 Pro+ cuenta con procesador MediaTek Dimensity 920. </p>
