--- a/pages/productos/smartphone-4.html
+++ b/pages/productos/smartphone-4.html
@@ -80,7 +80,7 @@
                     <div class="p-4">
                         <strong data-id="smartphone">Redmi Note 11S 6GB RAM</strong>
                         <div class="precios pb-5 pt-2">
-                            <span class="me-4 ">$350.900</span>
+                            <span class="me-4 ">350900.00</span>
                             <span class="text-decoration-line-through">$375.900</span> <!-- espaciado entre precios -->
                         </div>
                         <p>108 MP de pura experiencia. Poderosa cámara principal de 108 MP. Pantalla AMOLED DotDisplay
