--- a/pages/productos/smartphone-5.html
+++ b/pages/productos/smartphone-5.html
@@ -80,7 +80,7 @@
                     <div class="p-4">
                         <strong data-id="smartphone">Redmi 10A 2GB RAM</strong>
                         <div class="precios pb-5 pt-2">
-                            <span class="me-4 ">$95.899</span>
+                            <span class="me-4 ">95899.00</span>
                             <span class="text-decoration-line-through">$99.900</span> <!-- espaciado entre precios -->
                         </div>
                         <p>Tus películas favoritas cobran vida en la gran pantalla HD+ de 6,53".</p>
