--- a/pages/productos/smartphone-6.html
+++ b/pages/productos/smartphone-6.html
@@ -80,7 +80,7 @@
                     <div class="p-4">
                         <strong data-id="smartphone">Xiaomi 11T 8GB RAM </strong>
                         <div class="precios pb-5 pt-2">
-                            <span class="me-4 ">$498.900</span>
+                            <span class="me-4 ">498900.00</span>
                             <span class="text-decoration-line-through">$552.000</span> <!-- espaciado entre precios -->
                         </div>
                         <p>Pantalla AMOLED AdaptativeSync de 120 Hz.</p>
