--- a/pages/productos/accesorios-2.html
+++ b/pages/productos/accesorios-2.html
@@ -80,7 +80,7 @@
                     <div class="p-4">
                         <strong data-id="accesorios">Scooter Eléctrico Xiaomi 3</strong>
                         <div class="precios pb-5 pt-2">
-                            <span class="me-4 ">$671.900</span>
+                            <span class="me-4 ">671900.00</span>
                             <span class="text-decoration-line-through">$791.000</span> <!-- espaciado entre precios -->
                         </div>
                         <p>El Xiaomi Mi Electric Scooter 3 Recorre hasta 30 km de distancia. Cuenta con Energía
