--- a/pages/productos/computacion-3.html
+++ b/pages/productos/computacion-3.html
@@ -80,7 +80,7 @@
                     <div class="p-4">
                         <strong data-id="computacion">Mouse Inalámbrico Xiaomi Mi Dual Mode Silent Edition</strong>
                         <div class="precios pb-5 pt-2">
-                            <span class="me-4 ">$17.899</span>
+                            <span class="me-4 ">17899.00</span>
                             <span class="text-decoration-line-through"></span> <!-- espaciado entre precios -->
                         </div>
                         <p>Funcionamiento ultra silencioso.</p>
