--- a/pages/productos/smartphone-2.html
+++ b/pages/productos/smartphone-2.html
@@ -80,7 +80,7 @@
                     <div class="p-4">
                         <strong data-id="smartphone">Xiaomi 11T Pro</strong>
                         <div class="precios pb-5 pt-2">
-                            <span class="me-4 ">$631.900</span>
+                            <span class="me-4 ">631900.00</span>
                             <span class="text-decoration-line-through">$670.900</span> <!-- espaciado entre precios -->
                         </div>
                         <p>Gracias a su compatibilidad con cada etapa del proceso de creación y presentación de imágenes
