agrego funcion calculartotal

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -68,12 +68,15 @@
                                 <hr class="my-5">
 
                                 <div class="d-flex justify-content-between">
-                                    <h5>Xiaomi 10 2022</h5>
-                                    <h5>$ 155.900</h5>
+                                    <h5>Subtotal Productos: </h5>
+                                    <h5 id="sub-total"></h5>
                                 </div>
                                 <div class="d-flex justify-content-between">
-                                    <h5>Buds 3T Pro</h5>
-                                    <h5>$ 127.900</h5>
+                                    <h5>Envío gratis </h5>
+                                </div>
+                                <div class="d-flex justify-content-between">
+                                    <h5>IVA:  </h5>
+                                    <h5 id="iva"></h5>
                                 </div>
 
 
@@ -83,7 +86,7 @@
 
                                 <div class="d-flex justify-content-between mb-5">
                                     <h5>PRECIO TOTAL</h5>
-                                    <h5>$ 745.700</h5>
+                                    <h5 id="total"></h5>
                                 </div>
                                 <div class="d-flex justify-content-end">
                                     <button type="button" class="btn btn-outline-secondary">Comprar</button>
