--- a/pages/computacion.html
+++ b/pages/computacion.html
@@ -71,7 +71,7 @@
 
     <main>
         <section class="container pt-4 pb-2">
-            <h2 class="titulo-productos">Computación</h2>
+            <h2 class="titulo-productos animate__animated  animate__heartBeat animate__slow">Computación</h2>
 
             <div class="row row-cols-2 row-cols-md-4 g-3 py-2">
 
