--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
             <input class="form-control me-2" type="search" placeholder="¿Qué estás buscando?" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Buscar</button>
           </form>
-          
-
           <!-- ! Carrito -->
           <div class="dropdown dropstart">
             <a type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -105,7 +103,7 @@
     </div> <!-- .carousel -->
 
     <div class="lineas">
-      <h2>SMARTPHONES</h2>
+      <h2 class="animate__animated animate__delay-1s animate__bounce animate__slow">SMARTPHONES</h2>
     </div>
 
 
@@ -188,7 +186,7 @@
     </section> <!-- ! FIN SECTION CARD-->
 
     <div class="lineas mt-5">
-      <h2>DESTACADOS</h2>
+      <h2 class="animate__animated animate__delay-1s animate__bounce animate__slow">DESTACADOS</h2>
     </div>
 
     <section class="container"> <!-- !Section destacados -->
