elimino seleccion de cantidad en productos

--- a/pages/productos/accesorios-1.html
+++ b/pages/productos/accesorios-1.html
@@ -89,17 +89,13 @@
                         <p>Con un chip de bajo consumo integrado, los auriculares pueden funcionar hasta 6 horas con una
                             sola carga. Con la ayuda de un estuche de carga, los auriculares pueden funcionar hasta 28
                             horas. Por lo tanto, puede disfrutar de la música durante horas y horas.</p>
-                        <div class="d-flex justify-content-evenly py-5">
-                            <select class="form-select">
-                                <option selected>Cantidad</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
+                        <div class=" d-flex justify-content-end">
                             <button class="btn agregar-carrito" type="button" data-id="1">Agregar al carrito</button>
                         </div>
+
                     </div>
                 </div>
+            </div>
             </div>
 
         </section>
