--- a/pages/productos/accesorios-2.html
+++ b/pages/productos/accesorios-2.html
@@ -93,13 +93,7 @@
                         <p>El scooter Xiaomi Mi Electric Scooter 3 no solo cuenta con una luz de advertencia trasera
                             LED, sino también con una luz reflectora delantera de gran tamaño y reflectores laterales
                             bidireccionales para mantenerlo seguro.</p>
-                        <div class="d-flex justify-content-evenly py-5">
-                            <select class="form-select">
-                                <option selected>Cantidad</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
+                        <div class=" d-flex justify-content-end">
                             <button class="btn agregar-carrito" type="button" data-id="2">Agregar al carrito</button>
                         </div>
 
