--- a/pages/productos/accesorios-4.html
+++ b/pages/productos/accesorios-4.html
@@ -91,13 +91,7 @@
                             Controla el sueño durante las 24 horas y proporciona informes detallados sobre el sueño
                             profundo, el sueño ligero y las fases REM para ayudarte a tener control sobre qué ocurre
                             durante el sueño. Monitor de frecuencia cardiaca continuo.</p>
-                        <div class="d-flex justify-content-evenly py-5">
-                            <select class="form-select">
-                                <option selected>Cantidad</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
+                        <div class=" d-flex justify-content-end">
                             <button class="btn agregar-carrito" type="button" data-id="4">Agregar al carrito</button>
                         </div>
 
