--- a/pages/productos/accesorios-5.html
+++ b/pages/productos/accesorios-5.html
@@ -89,13 +89,7 @@
                         <p>Seguridad: este banco de energía está equipado con múltiples tecnologías de protección para
                             evitar sobrecargas, sobredescargas, sobrecalentamientos y cortocircuitos en cualquier
                             condición de funcionamiento.</p>
-                        <div class="d-flex justify-content-evenly py-5">
-                            <select class="form-select">
-                                <option selected>Cantidad</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
+                        <div class=" d-flex justify-content-end">
                             <button class="btn agregar-carrito" type="button" data-id="5">Agregar al carrito</button>
                         </div>
 
