--- a/pages/productos/accesorios-6.html
+++ b/pages/productos/accesorios-6.html
@@ -86,13 +86,7 @@
                         <p>Reforzado con fibra de vidrio y TPE, cable USB-C con una longitud de 100 cm, cumple con las
                             condiciones de los fans de Xiaomi más exigentes. ¡Conecte su smartphone con un cargador o PC
                             y disfrute de una conexión confiable!</p>
-                        <div class="d-flex justify-content-evenly py-5">
-                            <select class="form-select">
-                                <option selected>Cantidad</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
+                        <div class=" d-flex justify-content-end">
                             <button class="btn agregar-carrito" type="button" data-id="6">Agregar al carrito</button>
                         </div>
 
