--- a/pages/productos/computacion-1.html
+++ b/pages/productos/computacion-1.html
@@ -90,13 +90,7 @@
                             los cuatro altavoces con tecnología Dolby Atmos de los que presume esta tablet. Esta tablet
                             es compatible con lápiz óptico y funda con teclado, por lo que podemos equiparla para que
                             sea un gran dispositivo a nivel de productividad y ofimática.</p>
-                        <div class="d-flex justify-content-evenly py-5">
-                            <select class="form-select">
-                                <option selected>Cantidad</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
+                        <div class=" d-flex justify-content-end">
                             <button class="btn agregar-carrito" type="button" data-id="7">Agregar al carrito</button>
                         </div>
 
