--- a/pages/productos/computacion-2.html
+++ b/pages/productos/computacion-2.html
@@ -92,13 +92,7 @@
                             presión aplicada: cuanto más fuerte presiones la pantalla, más grueso será el trazo. Utiliza
                             la punta del dedo u otros objetos para escribir sin retardos en la pantalla, o bien escribe
                             con el lápiz suministrado para obtener los mejores resultados.</p>
-                        <div class="d-flex justify-content-evenly py-5">
-                            <select class="form-select">
-                                <option selected>Cantidad</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
+                        <div class=" d-flex justify-content-end">
                             <button class="btn agregar-carrito" type="button" data-id="8">Agregar al carrito</button>
                         </div>
 
