--- a/pages/productos/computacion-3.html
+++ b/pages/productos/computacion-3.html
@@ -85,13 +85,7 @@
                         </div>
                         <p>Funcionamiento ultra silencioso.</p>
                         <p>Deslizamiento y desplazamiento silenciosos con rueda de goma suave.</p>
-                        <div class="d-flex justify-content-evenly py-5">
-                            <select class="form-select">
-                                <option selected>Cantidad</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
+                        <div class=" d-flex justify-content-end">
                             <button class="btn agregar-carrito" type="button" data-id="9">Agregar al carrito</button>
                         </div>
 
