--- a/pages/productos/computacion-4.html
+++ b/pages/productos/computacion-4.html
@@ -90,13 +90,7 @@
                         <p>Agarre cómodo.</p>
                         <p>Batería de duración extra larga. </p>
                         <p>Potencia duradera para que tu proceso creativo nunca se detenga.</p>
-                        <div class="d-flex justify-content-evenly py-5">
-                            <select class="form-select">
-                                <option selected>Cantidad</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
+                        <div class=" d-flex justify-content-end">
                             <button class="btn agregar-carrito" type="button" data-id="10">Agregar al carrito</button>
                         </div>
 
