--- a/pages/productos/smartphone-1.html
+++ b/pages/productos/smartphone-1.html
@@ -89,13 +89,7 @@
                         <p>Potente procesador de ocho núcleos : MediaTek Helio G88 hace su debut mundial con Redmi 10
                             2022 Carbon Gray 4GB RAM 128GB ROM. El nuevo procesador permite fotos más claras y una mejor
                             experiencia de juego.</p>
-                        <div class="d-flex justify-content-evenly py-5">
-                            <select class="form-select">
-                                <option selected>Cantidad</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
+                        <div class=" d-flex justify-content-end">
                             <button class="btn agregar-carrito" type="button" data-id="11">Agregar al carrito</button>
                         </div>
 
