--- a/pages/productos/smartphone-2.html
+++ b/pages/productos/smartphone-2.html
@@ -90,13 +90,7 @@
                         <p>Xiaomi 11T Pro cuenta con un procesador de 5 nm qué mejora el rendimiento de la CPU en un 25
                             % y el de la GPU en un 35 %, en comparación con la generación anterior. Esto permite un
                             rendimiento sin precedentes y un consumo de energía más eficiente.</p>
-                        <div class="d-flex justify-content-evenly py-5">
-                            <select class="form-select">
-                                <option selected>Cantidad</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
+                        <div class=" d-flex justify-content-end">
                             <button class="btn agregar-carrito" type="button" data-id="12">Agregar al carrito</button>
                         </div>
 
