--- a/pages/productos/smartphone-3.html
+++ b/pages/productos/smartphone-3.html
@@ -89,13 +89,7 @@
                             JBL y la batería de 4500 mAh con hasta 120 W de potencia de carga HyperCharge.</p>
                         <p>Disfruta de juegos y transmisiones sin interrupciones,así como de descargas y uso compartido
                             ultrarrápidos. </p>
-                        <div class="d-flex justify-content-evenly py-5">
-                            <select class="form-select">
-                                <option selected>Cantidad</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
+                        <div class=" d-flex justify-content-end">
                             <button class="btn agregar-carrito" type="button" data-id="13">Agregar al carrito</button>
                         </div>
 
