--- a/pages/productos/smartphone-4.html
+++ b/pages/productos/smartphone-4.html
@@ -91,13 +91,7 @@
                         <p>El procesador MediaTek Helio G96 ofrece un increíble rendimiento de la cámara de 108 MP y una
                             fluida tasa de refresco de 90 Hz, por lo que podrás disfrutar de imágenes nítidas y potentes
                             experiencias de juego.</p>
-                        <div class="d-flex justify-content-evenly py-5">
-                            <select class="form-select">
-                                <option selected>Cantidad</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
+                        <div class=" d-flex justify-content-end">
                             <button class="btn agregar-carrito" type="button" data-id="14">Agregar al carrito</button>
                         </div>
 
