--- a/pages/productos/smartphone-5.html
+++ b/pages/productos/smartphone-5.html
@@ -89,13 +89,7 @@
                             inolvidables.</p>
                         <p>Vea todos sus medios favoritos con un potente sistema de altavoces que le permite
                             experimentar un audio vibrante e inmersivo.</p>
-                        <div class="d-flex justify-content-evenly py-5">
-                            <select class="form-select">
-                                <option selected>Cantidad</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
+                        <div class=" d-flex justify-content-end">
                             <button class="btn agregar-carrito" type="button" data-id="15">Agregar al carrito</button>
                         </div>
 
