--- a/pages/productos/smartphone-6.html
+++ b/pages/productos/smartphone-6.html
@@ -94,13 +94,7 @@
                             cual gracias a su diseño de bomba de carga doble, aumentará la entrada de corriente, además
                             junto a la tecnología MTW (Múltiple Tab Winding), ayuda a reducir la resistencia eléctrica y
                             el sobrecalentamiento mejorando la eficiencia de carga.</p>
-                        <div class="d-flex justify-content-evenly py-5">
-                            <select class="form-select">
-                                <option selected>Cantidad</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
+                        <div class=" d-flex justify-content-end">
                             <button class="btn agregar-carrito" type="button" data-id="16">Agregar al carrito</button>
                         </div>
 
