--- a/pages/productos/accesorios-3.html
+++ b/pages/productos/accesorios-3.html
@@ -91,13 +91,7 @@
                         <p>Cuenta con una tecnología Dual-band para un posicionamiento más rápido y una ruta más
                             precisa.</p>
                         <p>La batería del nuevo Xiaomi Watch S1 Active es de hasta 12 días.</p>
-                        <div class="d-flex justify-content-evenly py-5">
-                            <select class="form-select">
-                                <option selected>Cantidad</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
+                        <div class=" d-flex justify-content-end">
                             <button class="btn agregar-carrito" type="button" data-id="3">Agregar al carrito</button>
                         </div>
 
