--- a/pages/computacion.html
+++ b/pages/computacion.html
@@ -32,6 +32,10 @@
                             <a class="nav-link" href="/pages/computacion.html">Computación</a>
                         </li>
                     </ul>
+                    <button class="switch" id="switch">
+                        <span><i class="bi bi-sun"></i></span>
+                        <span><i class="bi bi-moon-stars"></i></span>
+                    </button>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="¿Qué estás buscando?"
                             aria-label="Search">
@@ -145,11 +149,11 @@
                 <div class="col-3">
                     <h5 class="border-navs">Links útiles</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-0"><a href="/pages/envios.html" class="nav-link  text-muted ">Envios</a>
+                        <li class="nav-item mb-0"><a href="/pages/envios.html" class="nav-link   ">Envios</a>
                         </li>
-                        <li class="nav-item mb-0"><a href="/pages/mpagos.html" class="nav-link  text-muted">Métodos de
+                        <li class="nav-item mb-0"><a href="/pages/mpagos.html" class="nav-link  ">Métodos de
                                 pago</a></li>
-                        <li class="nav-item mb-4"><a href="/pages/nosotros.html" class="nav-link  text-muted">Sobre
+                        <li class="nav-item mb-4"><a href="/pages/nosotros.html" class="nav-link  ">Sobre
                                 nosotros</a></li>
                     </ul>
                 </div>
